[gd_scene load_steps=4 format=3 uid="uid://dkrnbqfrf5rl7"]

[ext_resource type="Script" path="res://mesa.gd" id="1_o2etu"]
[ext_resource type="Texture2D" uid="uid://cso5vi0e6bhg8" path="res://iconos/mesa_libre.png" id="2_bktff"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t4c4p"]
size = Vector2(1.95703, 1.87891)

[node name="Mesa" type="Node2D"]
script = ExtResource("1_o2etu")

[node name="Area_Mesa" type="Area2D" parent="."]

[node name="Icono_Mesa" type="Sprite2D" parent="Area_Mesa"]
texture = ExtResource("2_bktff")

[node name="Texto_Mesa" type="Label" parent="Area_Mesa/Icono_Mesa"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Colision_Mesa" type="CollisionShape2D" parent="Area_Mesa"]
scale = Vector2(24, 24)
shape = SubResource("RectangleShape2D_t4c4p")

[connection signal="input_event" from="Area_Mesa" to="." method="_on_area_2d_input_event"]
